codama-macros/tests/codama_attribute/type_directive/no_type.fail.stderr
error: unrecognized type
 --> tests/codama_attribute/type_directive/no_type.fail.rs:3:1
  |
3 | #[codama(type = )]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `codama` (in Nightly builds, run with -Z macro-backtrace for more info)
