codama-macros/tests/codama_attribute/type_directive/no_type.fail.rs
use codama::codama;

#[codama(type = )]
pub struct Test;

fn main() {}
